--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter_username: m4nasi
 github_username: m4nasi
 
 # Build settings
-theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 # Exclude from processing.
