--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: manasimehta11@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
   A website to display recipes in one location.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://m4nasi.github.io/recipes/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: m4nasi
 github_username: m4nasi
 
